--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <a-marker preset="hiro">
         <!-- 3D Model -->
         <a-entity 
-          gltf-model="url(https://cdn.jsdelivr.net/gh/yourusername/yourrepo/yourmodel.glb)" 
+          gltf-model="https://github.com/ankit8102/PleasePass/blob/main/giant_panda.glb" 
           scale="0.5 0.5 0.5"
           position="0 0 0"
         >
